# connect-four

./: README.md  pyproject.toml
conf/: game_conf.py
modules/: coach.py  typings.py
modules/agent/: dqn.py
modules/agent/models/: convnext.py  utils.py
modules/env/: env.py  game.py  typings.py
modules/utils/: model_utils.py  replay_buffer.py  utils.py
