[tool.poetry]
name = "connect four"
version = "0.1.0"
description = "fight with reinforcement learning model in connect four game"
authors = []
include = [
    {path = "conf", format = "wheel"},
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.0"
matplotlib = "^3.5.3"
numpy = "^1.23.2"
opencv-python = "^4.6.0"
PyYAML = "^6.0"
scipy = "^1.9.0"
torchvision = "^0.13.1"
tqdm = "^4.64.0"
protobuf = "3.20"
tensorboard = ">=2.4.1"
typed-argument-parser = "^1.7.2"
nptyping = "^2.2.0"
beartype = "^0.10.4"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "connect-four.app:main"

# Tests
[tool.pytest.ini_options]
testpaths = ["tests"]

# Pysen configuration
[tool.poetry.group.lint.dependencies]
pysen = {version = "^0.10.3", extras = ["lint"]}

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 100
py_version = "py39"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.pysen.lint.source]
# includes = ["."]
excludes = [".venv"]
